--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap -->
   <link href="libraries/css/bootstrap.css" rel="stylesheet">
+  <script src="https://use.fontawesome.com/463b552c2e.js"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +21,8 @@
     <body>
       <div class="container">
         <div class="row topo">
-          <img class="img-responsive img-topo" src="libraries/img/topo.jpg">
+          <img class="hidden-sm-down img-responsive img-topo" src="libraries/img/topo.jpg">
+          <img class="hidden-md-up img-responsive img-topo" src="libraries/img/topo2.png">
         </div>
         <div class="row">
           <nav class="navbar navbar-default">
@@ -62,18 +64,36 @@
         </div>
       </div>
       <div class="row">
-        <div class="container">
-          sadsdas
-        </div>
+        <div class="container conteudo">
+          <h1>Histórico</h1>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      
+
+        </div>
 
 
       </div>
 
+      <div class="row footer">
+        <div class="container">
+          <h4>FGF -  Federação Gaúcha de Combate</h4>
+          <i class="fa fa-facebook-official social" aria-hidden="true"></i>
+          <i class="fa fa-instagram social" aria-hidden="true"></i>
+       </div>
+     </div>
 
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="libraries/js/bootstrap.min.js"></script>
-    </body>
-    </html>
+
+
+
+
+
+
+
+
+     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+     <!-- Include all compiled plugins (below), or include individual files as needed -->
+     <script src="libraries/js/bootstrap.min.js"></script>
+   </body>
+   </html>
