--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <body>
       <div class="container">
         <div class="row topo">
-          <img class="hidden-sm-down img-responsive img-topo" src="libraries/img/topo.jpg">
-          <img class="hidden-md-up img-responsive img-topo" src="libraries/img/topo2.png">
+          <img class="hidden-xs img-responsive img-topo" src="libraries/img/topo.jpg">
+          <img class="hidden-sm hidden-md hidden-lg hidden-xl img-responsive img-topo" src="libraries/img/topo2.png">
         </div>
         <div class="row">
           <nav class="navbar navbar-default">
@@ -65,9 +65,17 @@
       </div>
       <div class="row">
         <div class="container conteudo">
-          <h1>Histórico</h1>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <h2>Histórico</h2>
+		  
+		  <p>
+		  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet ex vel velit vulputate pretium. Suspendisse massa nunc, pellentesque id efficitur vel, rutrum sit amet lacus. Duis non dui non nibh dignissim vehicula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget sem tempor, semper velit quis, faucibus mauris. In malesuada volutpat libero, ac malesuada ligula gravida in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in purus in libero euismod ultricies et et est.
+		  </p>
+<p>
+Nullam justo urna, hendrerit eu massa ut, convallis lacinia nisl. Praesent ultrices, mauris at ullamcorper tempor, lectus tellus vestibulum dui, non tristique tortor diam vitae sapien. Donec non aliquam leo, ac malesuada enim. Ut quis tincidunt risus, eget vestibulum metus. Donec posuere vitae est vel fringilla. Suspendisse quis orci euismod arcu maximus condimentum. Aenean laoreet laoreet arcu sed eleifend. Nulla sed turpis a tellus scelerisque volutpat. Pellentesque nec ex iaculis, finibus leo vel, consequat sapien. Nam placerat, tellus quis bibendum facilisis, risus quam pharetra est, sit amet ullamcorper mi magna eu tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse feugiat libero vitae venenatis imperdiet. Suspendisse potenti.
+</p>
+Maecenas placerat, odio nec sagittis euismod, mi purus rhoncus purus, id tincidunt ligula lectus in ligula. Etiam vehicula odio at tortor hendrerit bibendum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur auctor non odio quis aliquam. Integer non velit vitae elit congue venenatis vitae at augue. Praesent in cursus sapien. Nunc augue sem, efficitur quis libero non, blandit efficitur ex. Quisque consequat risus non risus faucibus accumsan. Sed egestas lectus eu velit ultricies dapibus. Donec diam risus, condimentum et vehicula vitae, porttitor ut mi. Fusce varius lorem tortor, ac finibus augue hendrerit sed. Donec non dui mollis, congue ex sed, efficitur tortor. Suspendisse tempor dolor sed sapien posuere, nec semper ante ornare. Vestibulum vel semper urna, ac aliquet ante. Nam nec leo ut eros consequat feugiat. Duis et sapien nec arcu fermentum bibendum.
+</p>
+<br><br><br><br><br><br>
       
 
         </div>
